--- a/index.html
+++ b/index.html
@@ -12,10 +12,41 @@
 </head>
 <body>
 
-    <button class="btn btn-danger">select <i class="fa-solid fa-check"></i></button>
-    
+    <div class="wrapper">
+        <div class="container">
+            <!-- title  -->
+            <div class="row py-4 text-center">
+                <div class="col">
+                    <h1>Contact list API</h1>
+                </div>
+            </div>
+        <!-- filter area  -->
+        <div class="row">
+            <div class="col">
+                <input type="text" class="form-control" placeholder="Search Name" onkeyup="handleOnSearch(this)">
+            </div>
+            <div class="col">
+                <select name="" id="" class="form-control" onchange="handleOnChange(this)">
+                    <option value="">--Select--</option>
+                    <option value="male">Male</option>
+                    <option value="female">Female</option>
+                </select>
+            </div>
+        </div>
 
-
+        <!-- contact list area  -->
+        <div class="row mt-5">
+            <div class="col">
+                <p><span id="user-count">0</span> users found!</p>
+                <div class="d-flex flex-wrap justify-content-around gap-2" id="list">
+                    <div class="spinner-border" role="status">
+                        <span class="visually-hidden">Loading...</span>
+                    </div>                   
+                </div>
+            </div>
+        </div>
+        </div>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
